test/bad/automatic/extension/class/compile_time/0006.lat
class janusz {
  int barbara() {
    return 5;
  }
}

class andrzej extends janusz {
  string barbara() {
    return "grzegorz";
  }
}

int main() {
  return 1;
}
